# othello_ml

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  clippy.toml
.github/workflows/: test.yml
docs/: best-practices.md  claude-code-setup.md  eval-quality.md  gui.md  reference.md  speedup-plan.md
scripts/: backup.sh  playok_download.py
src/: board.rs  edax.rs  features.rs  io.rs  lib.rs  main.rs  positions.rs  training.rs  weights.rs
src/eval/: alphabeta.rs  cache.rs  mod.rs  pattern.rs
src/eval/alphabeta/: depth.rs  leaf.rs  mod.rs  parallel.rs  search.rs  stability.rs  testutil.rs  tt.rs
src/eval/alphabeta/count_flip/: bmi2.rs  mod.rs  table.rs  tables.rs  via_flip.rs
src/gui/: LiberationSans-Regular.LICENSE.txt  mod.rs  modes.rs  render.rs  score.rs
src/othello/: board.rs  game.rs  mod.rs  position.rs  positions.rs
src/othello/flip/: avx2.rs  bmi2.rs  carry64.rs  generic.rs  line.rs  mod.rs  specialized.rs
src/othello/game/: discovery.rs  mod.rs  pgn.rs  wthor.rs
src/othello/get_moves/: avx2.rs  mod.rs  scalar.rs
src/training/: cg.rs  edax.rs  eval_cache.rs  features.rs  mod.rs  selfplay.rs  trainer.rs  training.rs  weights.rs
test_data/: exact_scores.txt  sample.wtb
