[package]
name = "othello_eval"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3"

[[bin]]
name = "othello_eval"
path = "src/main.rs"

[lib]
name = "othello_eval"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
