[package]
name = "othello_eval"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3"
# GUI subcommand only (`gui game|evaluate|pgn`). Pure-Rust, no system libs.
macroquad = "0.4"

[[bin]]
name = "othello_eval"
path = "src/main.rs"

[lib]
name = "othello_eval"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
